--- a/portfolio-app/index.html
+++ b/portfolio-app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Vivek Vijayan Pillai">
     <meta name="keywords" content="Vivek, Pillai, Portfolio, Vivek Pillai, Vivek Vijayan Pillai">
-    <title>Vite + React</title>
+    <title>Vivek Pillai</title>
   </head>
   <body>
     <div id="root"></div>
